--- a/mokepon.html
+++ b/mokepon.html
@@ -7,7 +7,7 @@
         <script src="./js/test.js"></script>
     </head>
     <body>
-        <h1>MOKEPON! 🔥💧🌱</h1>
+        <h1>MOKEPON! 🔥💧🌱 🌬️</h1>
 
         <section id="Seleccionar-mascota">
          <h2>Elige tu mascota:</h2>
@@ -34,6 +34,7 @@
                 <button id="boton-fuego">Fuego 🔥</button>
                 <button id="boton-agua">Agua 💧</button>
                 <button id="boton-tierra">Tierra 🌱</button>
+                <button id="boton-viento">Viento 🌬️ </button>
             </p>
         </section>
 
